--- a/protein_folding.html
+++ b/protein_folding.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Protein Folding Visualization</title>
+    <title>🧬 Protein Folding Visualization | Interactive 3D</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&family=Outfit:wght@300;400;600;700&display=swap');
         
